--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+  <head>
   <title>“青年大学习”2023年第12期</title>
-<body>
+  </head>
+    <body>
 <img src="2023years 11.jpg"></img>
 </body>
 </html>
