--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+ <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <title>“青年大学习”2023年第12期</title>
-  </head>
-    <body>
+  <style>
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
+<body>
 <img src="2023years 11.jpg"></img>
 </body>
 </html>
