--- a/jj.html
+++ b/jj.html
@@ -1,7 +1,14 @@
- <html>
-  <head>
+ <!DOCTYPE html>
+<html>
+<head>
   <title>“青年大学习”2023年第12期</title>
-   </head>
+  <style>
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
 <body>
 <img src="2023years 11.jpg"></img>
 </body>
