--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>“青年大学习”2023年第12期</title>
   <style>
+   body {
+    margin: 0;
+    padding: 0;
+   }
     img {
       max-width: 100%;
       height: auto;
